--- a/_posts/2018-01-18-Queues.md
+++ b/_posts/2018-01-18-Queues.md
@@ -21,8 +21,7 @@ facing it.
 You get these effects with queues:
 - Instead of running one logic in a loop and have a synchronized logic one by one, you get to set up multiple processes running independent jobs in parallel.
 - You get real-time scenario so once you dispatch a job it will be automatically pick up by the queue. If you run a cron job instead of queues, in that case for example you take all the entities you want something done for all the related users and inside this two level nested loop you have a log process with hard error handling. With queues each job is in-depended and can relate to only one entity and handle this job as you like, so example you can re-try, delay it and so on or run some other jobs only for that specific job that just finished. Apart from the flexibly that you get with queues, the cron solution might that long and you want to deliver results very fast (if that's what your application needs - aren't they all nowadays anyway) and the fastest the cron can go is per minute sync whereas the queue will pick up a job instantaneously.
-- Most importantly the user doesn't need to wait on his side for the page to load or finish saving. An example for this is when i am doing a sign up on a web site and press submit on a form that needs to send me an email as well. On the backend side after database work is done using a request to mail server is mail for the mail to be send and that will take at least 5 more seconds. And that might be fine but if you have a lot of users doing this thing, have in mind about another functionality that needs sending emails more frequently, this might be a bottleneck. So, this needs to be regulated, it needs to a
-queue. Instead of connecting to mail server a job for email is dispatch in a queue. We might have high priority queue for the likes of registrations and low priority for some messaging, that’s why we can see some delays for some message on some web sites due to their low priority queue as there’s a trade-off made what needs to be delivered to the customer faster and what not.
+- Most importantly the user doesn't need to wait on his side for the page to load or finish saving. An example for this is when i am doing a sign up on a web site and press submit on a form that needs to send me an email as well. On the backend side after database work is done using a request to mail server is sent and that will take at least 5 more seconds. And that might be fine but if you have a lot of users doing this thing, have in mind about another functionality that needs sending emails more frequently, this might be a bottleneck. So, this needs to be regulated, it needs to a queue. Instead of connecting to mail server a job for email is dispatch in a queue. We might have high priority queue for the likes of registrations and low priority for some messaging, that’s why we can see some delays for some message on some web sites due to their low priority queue as there’s a trade-off made what needs to be delivered to the customer faster and what not.
 
 Another side affect of the queues is that you have to make sure you don't egoist the memory and cpu usage. The memory itself will be freed once each job is done, to do that you need to unset your variables but not db connector of sort as the next one might break if plan to reuse it of-course, but also there is an option by default it is 128MB and once that is reach the process will be killed of and memory fried. The cpu is tricky as you can set the supervisor to run 20 processes and if each of them last like 1h or longer the cpu will always be 100%, no idly time, so designing the queues should be done in fashion of how long they run, how much memory they need and set the right number of processes. If you have very long processes you're better of with smaller number you would still like to have some room for breathing for cpu.
 
